# TimeLock

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  DEVELOPMENT_WORKFLOW.md  FINAL_RECOMMENDATION.md  MVP_FEATURE_MAPPING.md  README.md  TEAM_TASKS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
architecture/: api-flow.md  sequence-diagrams.md  system-context.md  user-flows.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.ts  server.ts
backend/src/config/: context.ts  db.ts  env.ts  errors.ts  logger.ts  mail.ts
backend/src/controllers/: admin.controller.ts  auth.controller.ts  authority.controller.ts  avcc.controller.ts  copilot.controller.ts  document.controller.ts  governance.controller.ts  interop-sandbox.controller.ts  judge.controller.ts  notary.controller.ts  operations.controller.ts  payment.controller.ts  transfer.controller.ts  twin-evolution.controller.ts  twin.controller.ts  user.controller.ts
backend/src/interfaces/: ai.interface.ts  blockchain.interface.ts  storage.interface.ts
backend/src/middleware/: api-gateway.middleware.ts  auth.middleware.ts  classification.middleware.ts  error.middleware.ts  rate-limiter.middleware.ts  rbac.middleware.ts  request-logger.middleware.ts  tenant.middleware.ts
backend/tests/: test-autonomous-intelligence-agip.ts  test-government-cloud-p3-p4.ts
blockchain/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
blockchain/migrations/: deploy.ts
blockchain/programs/legal_timelock/: Cargo.toml
blockchain/programs/legal_timelock/src/: lib.rs
blockchain/src/: document-program.ts  run-tests.ts  solana-client.ts  validate-deployment.ts
blockchain/tests/: legal_timelock.ts
deployment/: PRODUCTION_READINESS.md
docs/: 01_product_requirements_document.md  02_software_requirements_specification.md  03_system_design_document.md  04_implementation_plan.md  04_market_research_and_competitor_analysis.md  05_market_research_and_competitor_analysis.md  06_business_model_and_go_to_market_strategy.md  07_design.md  environment-setup.md
docs/hackathon/: API_LOCK.md  DEMO_FLOW.md  HACKATHON_SCOPE.md  INTEGRATION_PLAN.md  JUDGE_QNA.md  PITCH.md  TASKS.md
frontend/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/components/: AVCCDashboard.tsx  quick-verify-widget.tsx
frontend/context/: auth-context.tsx
frontend/lib/: api.ts  crypto.ts  solana-verifier.ts
shared/: api-contracts.ts  api-endpoints.md  enums.js  enums.ts  package-lock.json  package.json  tsconfig.json  types.ts  validation.js
(+156 files in other folders)
