[workspace]
members = [
    "programs/legal_timelock"
]
resolver = "2"

# ---------------------------------------------------------------------------
# Workspace-level dependency pins
# Reason: blake3 >=1.6 introduced a dependency on digest 0.11.x which pulls
# block-buffer 0.12.1. block-buffer 0.12.1 uses Rust edition 2024 in its
# Cargo.toml — a feature not stabilised in Cargo 1.75 (SBF platform tools
# v1.41).  Pinning blake3 to the 1.5 series keeps the dependency chain on
# digest 0.10.x / block-buffer 0.10.x which are edition 2021-compatible.
#
# solana-program is pinned to =1.18.17 so the resolver cannot select any
# newer patch (e.g. 1.18.26) that already carries blake3 >=1.6.
# ---------------------------------------------------------------------------
[workspace.dependencies]
blake3         = { version = "=1.5.5", features = ["traits-preview"] }
solana-program = "=1.18.17"
# zeroize_derive 1.5.0 uses edition 2024 which Cargo 1.75 (SBF v1.41) cannot
# parse. Pin the derive proc-macro to 1.4.3 (last edition-2021 release) and
# zeroize itself to the version Solana 1.18.17 uses in its own workspace.
zeroize        = { version = "=1.3.0", features = ["zeroize_derive"] }
zeroize_derive = "=1.4.3"
# borsh 1.7.0 pulls borsh-derive 1.7.0 -> proc-macro-crate 3.5.0 ->
# toml_edit 0.25.x -> toml_datetime 1.1.1 (edition2024). Pin to 1.2.1
# which is what Solana 1.18.17 itself uses, routing through
# proc-macro-crate 2.x -> toml_edit 0.21.x -> toml_datetime 0.6.x.
borsh          = { version = "=1.2.1", features = ["derive", "unstable__schema"] }
indexmap       = "=2.1.0"
unicode-segmentation = "=1.11.0"
proc-macro2    = "=1.0.94"



[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
