[package]
name = "legal_timelock"
version = "0.1.0"
description = "Solana Anchor program for Legal TimeLock Network (LTN)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "legal_timelock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []

[dependencies]
# Exact pin: ensures we compile against the same anchor-lang that AVM installed.
anchor-lang = "=0.30.1"

# Inherit version-ceiling pins from workspace to keep SBF cargo 1.75 happy:
#   blake3 =1.5.5         -> avoids digest 0.11 -> block-buffer 0.12.1 (edition2024)
#   zeroize_derive =1.4.3 -> avoids zeroize_derive 1.5.0 (edition2024)
#   borsh =1.2.1          -> avoids borsh-derive 1.7 -> toml_datetime 1.1.1 (edition2024)
blake3         = { workspace = true }
zeroize        = { workspace = true }
zeroize_derive = { workspace = true }
borsh          = { workspace = true }
indexmap       = { workspace = true }
unicode-segmentation = { workspace = true }
proc-macro2    = { workspace = true }
